--- a/ivy.xml
+++ b/ivy.xml
@@ -14,6 +14,7 @@
 	<publications defaultconf="build,deploy">
 		<artifact name="fmk-schema" ext="zip"/>
 		<artifact name="fmk-schema-idws" ext="zip" />
+		<artifact name="fmk-schema-idws-xua" ext="zip" />
         <artifact name="fmk-schema-dist" ext="zip" />
         <artifact name="NamespaceOracle-generated" ext="properties" />
         <artifact name="fmk-schema-classes" ext="jar" conf="jar" />
