Tilføjet IDWS-XUA WSDL: 1.4.4 E1

--- a/build.xml
+++ b/build.xml
@@ -140,7 +140,7 @@
         <!--organize-idws-xua-schemas-macro wsdlname="MedicineCard" versiondate="2012_06_01"-->
         <!--organize-idws-xua-schemas-macro wsdlname="MedicineCard" versiondate="2013_06_01"-->
         <organize-idws-xua-schemas-macro wsdlname="MedicineCard" versiondate="2015_01_01"/>
-        <!--organize-idws-xua-schemas-macro wsdlname="MedicineCard" versiondate="2015_01_01_E1"-->
+        <organize-idws-xua-schemas-macro wsdlname="MedicineCard" versiondate="2015_01_01_E1"/>
         <!--organize-idws-xua-schemas-macro wsdlname="MedicineCard" versiondate="2015_01_01_E2"-->
         <!--organize-idws-xua-schemas-macro wsdlname="MedicineCard" versiondate="2015_01_01_E4"-->
         <!--organize-idws-xua-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01"-->
