Tilføjet flere IDWS-XUA WSDL'er

--- a/build.xml
+++ b/build.xml
@@ -149,13 +149,13 @@
 
         <!--organize-idws-xua-schemas-macro wsdlname="EffectuationOrdering" versiondate="2012_06_01"-->
         <!--organize-idws-xua-schemas-macro wsdlname="EffectuationOrdering" versiondate="2013_06_01"-->
-        <!--organize-idws-xua-schemas-macro wsdlname="EffectuationOrdering" versiondate="2015_01_01"-->
+        <organize-idws-xua-schemas-macro wsdlname="EffectuationOrdering" versiondate="2015_01_01"/>
         <!--organize-idws-xua-schemas-macro wsdlname="EffectuationOrdering" versiondate="2015_01_01_E2"-->
 
         <!--organize-idws-xua-schemas-macro wsdlname="PatientOrganisationRelation" versiondate="2012_06_01"-->
         <!--organize-idws-xua-schemas-macro wsdlname="PatientOrganisationRelation" versiondate="2013_06_01"-->
         <!--organize-idws-xua-schemas-macro wsdlname="PatientRegistration" versiondate="2015_01_01"-->
-        <!--organize-idws-xua-schemas-macro wsdlname="PatientRegistration" versiondate="2015_01_01_E1"-->
+        <organize-idws-xua-schemas-macro wsdlname="PatientRegistration" versiondate="2015_01_01_E1"/>
         <!--organize-idws-xua-schemas-macro wsdlname="PatientRegistration" versiondate="2015_01_01_E2"-->
         <!--organize-idws-xua-schemas-macro wsdlname="PatientRegistration" versiondate="2015_06_01"-->
         <!--organize-idws-xua-schemas-macro wsdlname="PatientRegistration" versiondate="2015_06_01_E2"-->
