Pga. ny wiki-server skal publicering af feltbeskrivelser skal nu gå til https://wiki.fmk.netic.dk

--- a/build.xml
+++ b/build.xml
@@ -711,7 +711,7 @@
 		    </filterchain>
 		</loadfile>
 		<echo message="Posting to fmk:${dokuwikiid}:feltbeskrivelser"/>
-		<http url="http://wiki.fmk.netic.dk/lib/exe/xmlrpc.php" method="POST" printResponse="true" printResponseHeaders="true" printRequest="false" printRequestHeaders="true" setContentLengthHeader="true">
+		<http url="https://wiki.fmk.netic.dk/lib/exe/xmlrpc.php" method="POST" printResponse="true" printResponseHeaders="true" printRequest="false" printRequestHeaders="true" setContentLengthHeader="true">
 			<entity value="${xmlrpc}" binary="false"/>
 			<credentials username="${dokuwiki.username}" password="${dokuwiki.password}"/>
 			<headers>
