FMK-5126 Sidste dele af oprettelse af E5

--- a/build.xml
+++ b/build.xml
@@ -220,8 +220,10 @@
 	        <organize-idws-schemas-macro wsdlname="PatientRegistration" versiondate="2015_01_01"/>
 	        <organize-idws-schemas-macro wsdlname="PatientRegistration" versiondate="2015_01_01_E1"/>
 	        <organize-idws-schemas-macro wsdlname="PatientRegistration" versiondate="2015_01_01_E2"/>
+	        <organize-idws-schemas-macro wsdlname="PatientRegistration" versiondate="2015_01_01_E5"/>
 	        <organize-idws-schemas-macro wsdlname="PatientRegistration" versiondate="2015_06_01"/>
 	        <organize-idws-schemas-macro wsdlname="PatientRegistration" versiondate="2015_06_01_E2"/>
+	        <organize-idws-schemas-macro wsdlname="PatientRegistration" versiondate="2015_06_01_E5"/>
 
 	        <copy todir="${idws.target.dir}">
 	            <fileset dir="${idws.target.dir}/gensrc/META-INF" includes="schemas/**"/>
@@ -301,8 +303,10 @@
         <organize-schemas-macro wsdlname="PatientRegistration" versiondate="2015_01_01"/>
         <organize-schemas-macro wsdlname="PatientRegistration" versiondate="2015_01_01_E1"/>
         <organize-schemas-macro wsdlname="PatientRegistration" versiondate="2015_01_01_E2"/>
+        <organize-schemas-macro wsdlname="PatientRegistration" versiondate="2015_01_01_E5"/>
         <organize-schemas-macro wsdlname="PatientRegistration" versiondate="2015_06_01"/>
         <organize-schemas-macro wsdlname="PatientRegistration" versiondate="2015_06_01_E2"/>
+        <organize-schemas-macro wsdlname="PatientRegistration" versiondate="2015_06_01_E5"/>
 
         <organize-schemas-macro wsdlname="DumpRestore" versiondate="2013_01_01"/>
 
@@ -372,9 +376,11 @@
         <dist_zips-macro version-yymmdd="2015_01_01_E1" version="1.4.4.E1"/>
         <dist_zips-macro version-yymmdd="2015_01_01_E2" version="1.4.4.E2"/>
         <dist_zips-macro version-yymmdd="2015_01_01_E4" version="1.4.4.E4"/>
+        <dist_zips-macro version-yymmdd="2015_01_01_E5" version="1.4.4.E5"/>
         <dist_zips-macro version-yymmdd="2015_06_01" version="1.4.6"/>
         <dist_zips-macro version-yymmdd="2015_06_01_E2" version="1.4.6.E2"/>
         <dist_zips-macro version-yymmdd="2015_06_01_E3" version="1.4.6.E3"/>
+        <dist_zips-macro version-yymmdd="2015_06_01_E5" version="1.4.6.E5"/>
 
         <!-- Collection of all collections -->
         <zip destfile="${target.dir}/fmk-schema-dist.zip"
@@ -498,8 +504,10 @@
     	<codegen wsdlfilename="${standard.target.dir}/wsdl/PatientRegistration-inline_2015_01_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
     	<codegen wsdlfilename="${standard.target.dir}/wsdl/PatientRegistration-inline_2015_01_01_E1.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
     	<codegen wsdlfilename="${standard.target.dir}/wsdl/PatientRegistration-inline_2015_01_01_E2.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
+    	<codegen wsdlfilename="${standard.target.dir}/wsdl/PatientRegistration-inline_2015_01_01_E5.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
     	<codegen wsdlfilename="${standard.target.dir}/wsdl/PatientRegistration-inline_2015_06_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
     	<codegen wsdlfilename="${standard.target.dir}/wsdl/PatientRegistration-inline_2015_06_01_E2.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
+    	<codegen wsdlfilename="${standard.target.dir}/wsdl/PatientRegistration-inline_2015_06_01_E5.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2012_06_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2013_06_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
     	<codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2015_01_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
@@ -648,8 +656,10 @@
 		<validatewsdl-macro wsdlfilename="PatientRegistration-inline_2015_01_01"/>
         <validatewsdl-macro wsdlfilename="PatientRegistration-inline_2015_01_01_E1"/>
         <validatewsdl-macro wsdlfilename="PatientRegistration-inline_2015_01_01_E2"/>
+        <validatewsdl-macro wsdlfilename="PatientRegistration-inline_2015_01_01_E5"/>
 		<validatewsdl-macro wsdlfilename="PatientRegistration-inline_2015_06_01"/>
 		<validatewsdl-macro wsdlfilename="PatientRegistration-inline_2015_06_01_E2"/>
+		<validatewsdl-macro wsdlfilename="PatientRegistration-inline_2015_06_01_E5"/>
 
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_2012_06_01"/>
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_2013_06_01"/>
