FMK-5126 Tilføjet FMK-E5 til build.xml

--- a/build.xml
+++ b/build.xml
@@ -107,6 +107,10 @@
                  token="/${idws.schemas}/" value="/schemas/"
                  description="Fix paths to referenced schemas"
                 />
+        <replace file="${idws.work.dir}/etc/wsdl/MedicineCard_Idws_2015_01_01_E5.wsdl"
+                 token="/${idws.schemas}/" value="/schemas/"
+                 description="Fix paths to referenced schemas"
+                />
     	<replace file="${idws.work.dir}/etc/wsdl/MedicineCard_Idws_2015_06_01.wsdl"
                  token="/${idws.schemas}/" value="/schemas/"
                  description="Fix paths to referenced schemas"
@@ -116,6 +120,10 @@
                  description="Fix paths to referenced schemas"
                 />
         <replace file="${idws.work.dir}/etc/wsdl/MedicineCard_Idws_2015_06_01_E3.wsdl"
+                 token="/${idws.schemas}/" value="/schemas/"
+                 description="Fix paths to referenced schemas"
+                />
+        <replace file="${idws.work.dir}/etc/wsdl/MedicineCard_Idws_2015_06_01_E5.wsdl"
                  token="/${idws.schemas}/" value="/schemas/"
                  description="Fix paths to referenced schemas"
                 />
@@ -206,9 +214,11 @@
 	        <organize-idws-schemas-macro wsdlname="MedicineCard" versiondate="2015_01_01_E1"/>
 	        <organize-idws-schemas-macro wsdlname="MedicineCard" versiondate="2015_01_01_E2"/>
 	        <organize-idws-schemas-macro wsdlname="MedicineCard" versiondate="2015_01_01_E4"/>
+	        <organize-idws-schemas-macro wsdlname="MedicineCard" versiondate="2015_01_01_E5"/>
 	        <organize-idws-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01"/>
 	        <organize-idws-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01_E2"/>
 	        <organize-idws-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01_E3"/>
+	        <organize-idws-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01_E5"/>
 
 	        <organize-idws-schemas-macro wsdlname="EffectuationOrdering" versiondate="2012_06_01"/>
 	        <organize-idws-schemas-macro wsdlname="EffectuationOrdering" versiondate="2013_06_01"/>
@@ -316,9 +326,11 @@
         <organize-schemas-macro wsdlname="MedicineCard" versiondate="2015_01_01_E1"/>
         <organize-schemas-macro wsdlname="MedicineCard" versiondate="2015_01_01_E2"/>
         <organize-schemas-macro wsdlname="MedicineCard" versiondate="2015_01_01_E4"/>
+        <organize-schemas-macro wsdlname="MedicineCard" versiondate="2015_01_01_E5"/>
         <organize-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01"/>
         <organize-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01_E2"/>
         <organize-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01_E3"/>
+        <organize-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01_E5"/>
 
 		<copy todir="${standard.target.dir}">
 			<fileset dir="${standard.target.dir}/gensrc/META-INF" includes="schemas/**"/>
@@ -514,9 +526,11 @@
         <codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2015_01_01_E1.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2015_01_01_E2.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2015_01_01_E4.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
+        <codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2015_01_01_E5.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2015_06_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2015_06_01_E2.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2015_06_01_E3.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
+        <codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2015_06_01_E5.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/EffectuationOrdering-inline_2012_06_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/EffectuationOrdering-inline_2013_06_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
     	<codegen wsdlfilename="${standard.target.dir}/wsdl/EffectuationOrdering-inline_2015_01_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
@@ -667,9 +681,11 @@
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_2015_01_01_E1"/>
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_2015_01_01_E2"/>
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_2015_01_01_E4"/>
+		<validatewsdl-macro wsdlfilename="MedicineCard-inline_2015_01_01_E5"/>
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_2015_06_01"/>
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_2015_06_01_E2"/>
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_2015_06_01_E3"/>
+		<validatewsdl-macro wsdlfilename="MedicineCard-inline_2015_06_01_E5"/>
 
                 <!--validatewsdl-macro wsdlfilename="MedicineCard-inline_Idws_2012_06_01"/>
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_Idws_2013_06_01"/>
