--- a/build.xml
+++ b/build.xml
@@ -650,7 +650,7 @@
 
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_Idws_2015_01_01"/>
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_Idws_2015_01_01_E1"/>
-		<validatewsdl-macro wsdlfilename="MedicineCard-inline_Idws_2015_06_01"/-->
+		<validatewsdl-macro wsdlfilename="MedicineCard-inline_Idws_2015_06_01"/>
                 
 		<validatewsdl-macro wsdlfilename="EffectuationOrdering-inline_2015_01_01"/>
 		<validatewsdl-macro wsdlfilename="EffectuationOrdering-inline_2015_01_01_E2"/>
