--- a/build.xml
+++ b/build.xml
@@ -355,6 +355,7 @@
                  update="false"
                  basedir="${standard.target.dir}/wsdl" includes="Advis*-collection.zip"/>
 
+        <dist_zips-macro version-yymmdd="2013_06_01" version="1.4.2"/>
         <dist_zips-macro version-yymmdd="2015_01_01" version="1.4.4"/>
         <dist_zips-macro version-yymmdd="2015_01_01_E1" version="1.4.4.E1"/>
         <dist_zips-macro version-yymmdd="2015_01_01_E2" version="1.4.4.E2"/>
@@ -648,9 +649,9 @@
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_2015_06_01_E3"/>
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_2015_06_01_E5"/>
 
-		<validatewsdl-macro wsdlfilename="MedicineCard-inline_Idws_2015_01_01"/>
+		<!--<validatewsdl-macro wsdlfilename="MedicineCard-inline_Idws_2015_01_01"/>
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_Idws_2015_01_01_E1"/>
-		<validatewsdl-macro wsdlfilename="MedicineCard-inline_Idws_2015_06_01"/>
+		<validatewsdl-macro wsdlfilename="MedicineCard-inline_Idws_2015_06_01"/-->
                 
 		<validatewsdl-macro wsdlfilename="EffectuationOrdering-inline_2015_01_01"/>
 		<validatewsdl-macro wsdlfilename="EffectuationOrdering-inline_2015_01_01_E2"/>
