FMK-5267 EO E5 i build.xml

--- a/build.xml
+++ b/build.xml
@@ -205,6 +205,7 @@
 
 	        <organize-idws-schemas-macro wsdlname="EffectuationOrdering" versiondate="2015_01_01"/>
 	        <organize-idws-schemas-macro wsdlname="EffectuationOrdering" versiondate="2015_01_01_E2"/>
+           <organize-idws-schemas-macro wsdlname="EffectuationOrdering" versiondate="2015_01_01_E5"/>
 
 	        <organize-idws-schemas-macro wsdlname="PatientRegistration" versiondate="2015_01_01"/>
 	        <organize-idws-schemas-macro wsdlname="PatientRegistration" versiondate="2015_01_01_E1"/>
@@ -284,6 +285,7 @@
 
         <organize-schemas-macro wsdlname="EffectuationOrdering" versiondate="2015_01_01"/>
         <organize-schemas-macro wsdlname="EffectuationOrdering" versiondate="2015_01_01_E2"/>
+        <organize-schemas-macro wsdlname="EffectuationOrdering" versiondate="2015_01_01_E5"/>
 
         <organize-schemas-macro wsdlname="PatientRegistration" versiondate="2015_01_01"/>
         <organize-schemas-macro wsdlname="PatientRegistration" versiondate="2015_01_01_E1"/>
@@ -501,6 +503,7 @@
         <codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2015_06_01_E5.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
     	<codegen wsdlfilename="${standard.target.dir}/wsdl/EffectuationOrdering-inline_2015_01_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
     	<codegen wsdlfilename="${standard.target.dir}/wsdl/EffectuationOrdering-inline_2015_01_01_E2.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
+        <codegen wsdlfilename="${standard.target.dir}/wsdl/EffectuationOrdering-inline_2015_01_01_E5.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/DumpRestore-inline_2013_01_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <!-- IMPORTANT: whenever a new <codegen> element regarding a new wsdl-file is added to this section, remember to add an <exec>-element validating the wsdl in the "validate-wsdl" target below -->
 
@@ -655,9 +658,11 @@
                 
 		<validatewsdl-macro wsdlfilename="EffectuationOrdering-inline_2015_01_01"/>
 		<validatewsdl-macro wsdlfilename="EffectuationOrdering-inline_2015_01_01_E2"/>
+        <validatewsdl-macro wsdlfilename="EffectuationOrdering-inline_2015_01_01_E5"/>
 		
 		<validateidwswsdl-macro wsdlfilename="EffectuationOrdering-inline_Idws_2015_01_01"/>
 		<validateidwswsdl-macro wsdlfilename="EffectuationOrdering-inline_Idws_2015_01_01_E2"/>
+        <validateidwswsdl-macro wsdlfilename="EffectuationOrdering-inline_Idws_2015_01_01_E5"/>
 
 		<validatewsdl-macro wsdlfilename="DumpRestore-inline_2013_01_01"/>
 	</target>
