Tilføjet trifork-commons

--- a/build.xml
+++ b/build.xml
@@ -10,7 +10,7 @@
 	<property file="build.jenkins.properties"/>
     <property name="medicinkortet-schemas" value="${basedir}" />
     <property name="ivy.settings.file" value="${basedir}/etc/ivy/fmk-ivyconf.xml" /> <!-- override ivy settings before importing trifork-common -->
-    <property name="trifork-common" value="${basedir}/../trifork-common"/>
+    <property name="trifork-common" value="${basedir}/trifork-common"/>
 	<import file="${trifork-common}/etc/build-common.xml"/>
 
     <property name="target.dir" value="${basedir}/target" />
