--- a/build.xml
+++ b/build.xml
@@ -118,6 +118,10 @@
                  token="/${idws.schemas}/" value="/schemas/"
                  description="Fix paths to referenced schemas"
                 />
+        <replace file="${idws.work.dir}/etc/wsdl/MedicineCard_Idws_2015_06_01_E6.wsdl"
+                 token="/${idws.schemas}/" value="/schemas/"
+                 description="Fix paths to referenced schemas"
+        />
     </target>
 
     <target name="filter-idws-xsds">
@@ -202,10 +206,11 @@
 	        <organize-idws-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01_E2"/>
 	        <organize-idws-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01_E3"/>
 	        <organize-idws-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01_E5"/>
+            <organize-idws-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01_E6"/>
 
 	        <organize-idws-schemas-macro wsdlname="EffectuationOrdering" versiondate="2015_01_01"/>
 	        <organize-idws-schemas-macro wsdlname="EffectuationOrdering" versiondate="2015_01_01_E2"/>
-           <organize-idws-schemas-macro wsdlname="EffectuationOrdering" versiondate="2015_01_01_E5"/>
+            <organize-idws-schemas-macro wsdlname="EffectuationOrdering" versiondate="2015_01_01_E5"/>
 
 	        <organize-idws-schemas-macro wsdlname="PatientRegistration" versiondate="2015_01_01"/>
 	        <organize-idws-schemas-macro wsdlname="PatientRegistration" versiondate="2015_01_01_E1"/>
@@ -318,6 +323,7 @@
         <organize-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01_E2"/>
         <organize-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01_E3"/>
         <organize-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01_E5"/>
+        <organize-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01_E6"/>
 
 		<copy todir="${standard.target.dir}">
 			<fileset dir="${standard.target.dir}/gensrc/META-INF" includes="schemas/**"/>
@@ -386,6 +392,7 @@
         <dist_zips-macro version-yymmdd="2015_06_01_E2" version="1.4.6.E2"/>
         <dist_zips-macro version-yymmdd="2015_06_01_E3" version="1.4.6.E3"/>
         <dist_zips-macro version-yymmdd="2015_06_01_E5" version="1.4.6.E5"/>
+        <dist_zips-macro version-yymmdd="2015_06_01_E6" version="1.4.6.E6"/>
 
         <!-- Collection of all collections -->
         <zip destfile="${target.dir}/fmk-schema-dist.zip"
@@ -524,6 +531,7 @@
         <codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2015_06_01_E2.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2015_06_01_E3.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2015_06_01_E5.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
+        <codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2015_06_01_E6.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
     	<codegen wsdlfilename="${standard.target.dir}/wsdl/EffectuationOrdering-inline_2015_01_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
     	<codegen wsdlfilename="${standard.target.dir}/wsdl/EffectuationOrdering-inline_2015_01_01_E2.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/EffectuationOrdering-inline_2015_01_01_E5.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
@@ -675,6 +683,7 @@
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_2015_06_01_E2"/>
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_2015_06_01_E3"/>
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_2015_06_01_E5"/>
+        <validatewsdl-macro wsdlfilename="MedicineCard-inline_2015_06_01_E6"/>
 
 		<!--<validatewsdl-macro wsdlfilename="MedicineCard-inline_Idws_2015_01_01"/>
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_Idws_2015_01_01_E1"/>
