--- a/build.xml
+++ b/build.xml
@@ -122,6 +122,10 @@
                  token="/${idws.schemas}/" value="/schemas/"
                  description="Fix paths to referenced schemas"
         />
+        <replace file="${idws.work.dir}/etc/wsdl/MedicineCard_Idws_2022_01_01_E6.wsdl"
+                 token="/${idws.schemas}/" value="/schemas/"
+                 description="Fix paths to referenced schemas"
+        />
     </target>
 
     <target name="filter-idws-xsds">
@@ -207,7 +211,7 @@
 	        <organize-idws-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01_E3"/>
 	        <organize-idws-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01_E5"/>
             <organize-idws-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01_E6"/>
-            <!--<organize-idws-schemas-macro wsdlname="MedicineCard" versiondate="2022_01_01"/> -->
+            <organize-idws-schemas-macro wsdlname="MedicineCard" versiondate="2022_01_01"/>
 
 	        <organize-idws-schemas-macro wsdlname="EffectuationOrdering" versiondate="2015_01_01"/>
 	        <organize-idws-schemas-macro wsdlname="EffectuationOrdering" versiondate="2015_01_01_E2"/>
